# pydanticai_mcp_demo

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
client/mcp_agent/: agent.py  cli.py  deps.py  run.py  tools.py
client/mcp_agent/util/: filter_ignored_files.py  schema_to_params.py
server/: index.ts  package-lock.json  package.json  test.ts  tsconfig.json
src/mcp_demo/: agent.py  cli.py  commands.py  deps.py  llm.py  run.py  tools.py
src/util/: filter_ignored_files.py  schema_to_params.py
